--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/aaronshivers/ratings-app#readme",
   "dependencies": {
-    "chai": "^4.2.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mocha": "^6.0.1",
     "mongoose": "^5.4.15"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.1"
   }
 }
