--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=development && node index.js",
-    "test": "export NODE_ENV=test && mocha -t 50000 tests/**/*/test.js",
+    "test": "export NODE_ENV=test && mocha -t 50000 tests/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "repository": {
@@ -24,7 +24,7 @@
     "mongoose": "^5.4.15"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.0.1"
+    "mocha": "^6.0.1",
+    "supertest": "^3.4.2"
   }
 }
