--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.4.15"
   },
   "devDependencies": {
+    "expect": "^24.1.0",
     "mocha": "^6.0.1",
     "supertest": "^3.4.2"
   }
