--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/aaronshivers/ratings-app#readme",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "dotenv": "^6.2.0",
     "expect": "^24.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.15"
   },
   "devDependencies": {
