--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=development && node index.js",
-    "test": "export NODE_ENV=test && mocha -t 5000 tests/**/*.test.js",
+    "test": "export NODE_ENV=test && mocha -t 50000 tests/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "dotenv": "^6.2.0",
     "expect": "^24.1.0",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.15"
