--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^6.2.0",
     "expect": "^24.1.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.15"
+    "mongoose": "^5.4.15",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "mocha": "^6.0.1",
